lab2/Code/syntax.output
状态 7 conflicts: 1 shift/reduce
状态 22 conflicts: 1 shift/reduce
状态 32 conflicts: 1 shift/reduce
状态 49 conflicts: 1 shift/reduce
状态 74 conflicts: 1 shift/reduce
状态 84 conflicts: 1 shift/reduce
状态 95 conflicts: 1 shift/reduce


语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error ExtDecList SEMI
    9       | error SEMI
   10       | error FunDec CompSt
   11       | Specifier error CompSt
   12       | Specifier ExtDecList
   13       | Specifier

   14 ExtDecList: VarDec
   15           | VarDec COMMA ExtDecList

   16 Specifier: TYPE
   17          | StructSpecifier

   18 StructSpecifier: STRUCT OptTag LC DefList RC
   19                | STRUCT Tag
   20                | STRUCT error RC
   21                | error OptTag LC DefList RC

   22 OptTag: %empty
   23       | ID

   24 Tag: ID

   25 VarDec: ID
   26       | VarDec LB INT RB
   27       | VarDec LB error RB

   28 FunDec: ID LP VarList RP
   29       | ID LP RP
   30       | ID LP error RP
   31       | ID error RP

   32 VarList: ParamDec COMMA VarList
   33        | ParamDec

   34 ParamDec: Specifier VarDec

   35 CompSt: LC DefList StmtList RC

   36 StmtList: %empty
   37         | Stmt StmtList

   38 Stmt: Exp SEMI
   39     | CompSt
   40     | RETURN Exp SEMI
   41     | IF LP Exp RP Stmt
   42     | IF LP Exp RP Stmt ELSE Stmt
   43     | IF error ELSE Stmt
   44     | WHILE LP Exp RP Stmt
   45     | WHILE error RP
   46     | WHILE error RC
   47     | error SEMI
   48     | Exp
   49     | RETURN Exp

   50 DefList: %empty
   51        | Def DefList

   52 Def: Specifier DecList SEMI
   53    | Specifier error SEMI
   54    | error DecList SEMI
   55    | Specifier DecList

   56 DecList: Dec
   57        | Dec COMMA DecList

   58 Dec: VarDec
   59    | VarDec ASSIGNOP Exp

   60 Exp: Exp ASSIGNOP Exp
   61    | Exp AND Exp
   62    | Exp OR Exp
   63    | Exp RELOP Exp
   64    | Exp PLUS Exp
   65    | Exp MINUS Exp
   66    | Exp STAR Exp
   67    | Exp DIV Exp
   68    | LP Exp RP
   69    | MINUS Exp
   70    | NOT Exp
   71    | ID LP Args RP
   72    | ID LP RP
   73    | Exp LB Exp RB
   74    | Exp DOT ID
   75    | ID
   76    | INT
   77    | FLOAT

   78 Args: Exp COMMA Args
   79     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 9 10 11 20 21 27 30 31 43 45 46 47 53 54
INT (258) 26 76
FLOAT (259) 77
ID (260) 23 24 25 28 29 30 31 71 72 74 75
SEMI (261) 4 5 7 8 9 38 40 47 52 53 54
COMMA (262) 15 32 57 78
TYPE (263) 16
STRUCT (264) 18 19 20
RETURN (265) 40 49
IF (266) 41 42 43
ELSE (267) 42 43
WHILE (268) 44 45 46
LC (269) 18 21 35
RC (270) 18 20 21 35 46
ASSIGNOP (271) 59 60
OR (272) 62
AND (273) 61
RELOP (274) 63
PLUS (275) 64
MINUS (276) 65 69
STAR (277) 66
DIV (278) 67
NOT (279) 70
LP (280) 28 29 30 41 42 44 68 71 72
RP (281) 28 29 30 31 41 42 44 45 68 71 72
LB (282) 26 27 73
RB (283) 26 27 73
DOT (284) 74
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    左： 0
Program (32)
    左： 1, 右： 0
ExtDefList (33)
    左： 2 3, 右： 1 3
ExtDef (34)
    左： 4 5 6 7 8 9 10 11 12 13, 右： 3
ExtDecList (35)
    左： 14 15, 右： 4 8 12 15
Specifier (36)
    左： 16 17, 右： 4 5 6 7 11 12 13 34 52 53 55
StructSpecifier (37)
    左： 18 19 20 21, 右： 17
OptTag (38)
    左： 22 23, 右： 18 21
Tag (39)
    左： 24, 右： 19
VarDec (40)
    左： 25 26 27, 右： 14 15 26 27 34 58 59
FunDec (41)
    左： 28 29 30 31, 右： 6 7 10
VarList (42)
    左： 32 33, 右： 28 32
ParamDec (43)
    左： 34, 右： 32 33
CompSt (44)
    左： 35, 右： 6 10 11 39
StmtList (45)
    左： 36 37, 右： 35 37
Stmt (46)
    左： 38 39 40 41 42 43 44 45 46 47 48 49, 右： 37 41 42 43
    44
DefList (47)
    左： 50 51, 右： 18 21 35 51
Def (48)
    左： 52 53 54 55, 右： 51
DecList (49)
    左： 56 57, 右： 52 54 55 57
Dec (50)
    左： 58 59, 右： 56 57
Exp (51)
    左： 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77, 右：
    38 40 41 42 44 48 49 59 60 61 62 63 64 65 66 67 68 69 70 73 74
    78 79
Args (52)
    左： 78 79, 右： 71 78


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    Program          转到状态 4
    ExtDefList       转到状态 5
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 1

    8 ExtDef: error . ExtDecList SEMI
    9       | error . SEMI
   10       | error . FunDec CompSt
   21 StructSpecifier: error . OptTag LC DefList RC

    ID    shift, and go to state 9
    SEMI  shift, and go to state 10

    $default  reduce using rule 22 (OptTag)

    ExtDecList  转到状态 11
    OptTag      转到状态 12
    VarDec      转到状态 13
    FunDec      转到状态 14


State 2

   16 Specifier: TYPE .

    $default  reduce using rule 16 (Specifier)


State 3

   18 StructSpecifier: STRUCT . OptTag LC DefList RC
   19                | STRUCT . Tag
   20                | STRUCT . error RC

    error  shift, and go to state 15
    ID     shift, and go to state 16

    LC  reduce using rule 22 (OptTag)

    OptTag  转到状态 17
    Tag     转到状态 18


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 19


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       转到状态 20
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI
   11       | Specifier . error CompSt
   12       | Specifier . ExtDecList
   13       | Specifier .

    error  shift, and go to state 21
    ID     shift, and go to state 22
    SEMI   shift, and go to state 23

    $end    reduce using rule 13 (ExtDef)
    error   [reduce using rule 13 (ExtDef)]
    TYPE    reduce using rule 13 (ExtDef)
    STRUCT  reduce using rule 13 (ExtDef)

    ExtDecList  转到状态 24
    VarDec      转到状态 13
    FunDec      转到状态 25


State 8

   17 Specifier: StructSpecifier .

    $default  reduce using rule 17 (Specifier)


State 9

   23 OptTag: ID .
   25 VarDec: ID .
   28 FunDec: ID . LP VarList RP
   29       | ID . LP RP
   30       | ID . LP error RP
   31       | ID . error RP

    error  shift, and go to state 26
    LP     shift, and go to state 27

    SEMI   reduce using rule 25 (VarDec)
    COMMA  reduce using rule 25 (VarDec)
    LC     reduce using rule 23 (OptTag)
    LB     reduce using rule 25 (VarDec)


State 10

    9 ExtDef: error SEMI .

    $default  reduce using rule 9 (ExtDef)


State 11

    8 ExtDef: error ExtDecList . SEMI

    SEMI  shift, and go to state 28


State 12

   21 StructSpecifier: error OptTag . LC DefList RC

    LC  shift, and go to state 29


State 13

   14 ExtDecList: VarDec .
   15           | VarDec . COMMA ExtDecList
   26 VarDec: VarDec . LB INT RB
   27       | VarDec . LB error RB

    COMMA  shift, and go to state 30
    LB     shift, and go to state 31

    $default  reduce using rule 14 (ExtDecList)


State 14

   10 ExtDef: error FunDec . CompSt

    LC  shift, and go to state 32

    CompSt  转到状态 33


State 15

   20 StructSpecifier: STRUCT error . RC

    RC  shift, and go to state 34


State 16

   23 OptTag: ID .
   24 Tag: ID .

    LC        reduce using rule 23 (OptTag)
    $default  reduce using rule 24 (Tag)


State 17

   18 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 35


State 18

   19 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 19 (StructSpecifier)


State 19

    0 $accept: Program $end .

    $default  接受


State 20

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 21

   11 ExtDef: Specifier error . CompSt

    LC  shift, and go to state 32

    CompSt  转到状态 36


State 22

   25 VarDec: ID .
   28 FunDec: ID . LP VarList RP
   29       | ID . LP RP
   30       | ID . LP error RP
   31       | ID . error RP

    error  shift, and go to state 26
    LP     shift, and go to state 27

    $end    reduce using rule 25 (VarDec)
    error   [reduce using rule 25 (VarDec)]
    SEMI    reduce using rule 25 (VarDec)
    COMMA   reduce using rule 25 (VarDec)
    TYPE    reduce using rule 25 (VarDec)
    STRUCT  reduce using rule 25 (VarDec)
    LB      reduce using rule 25 (VarDec)


State 23

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 24

    4 ExtDef: Specifier ExtDecList . SEMI
   12       | Specifier ExtDecList .

    SEMI  shift, and go to state 37

    $default  reduce using rule 12 (ExtDef)


State 25

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 38
    LC    shift, and go to state 32

    CompSt  转到状态 39


State 26

   31 FunDec: ID error . RP

    RP  shift, and go to state 40


State 27

   28 FunDec: ID LP . VarList RP
   29       | ID LP . RP
   30       | ID LP . error RP

    error   shift, and go to state 41
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 42

    Specifier        转到状态 43
    StructSpecifier  转到状态 8
    VarList          转到状态 44
    ParamDec         转到状态 45


State 28

    8 ExtDef: error ExtDecList SEMI .

    $default  reduce using rule 8 (ExtDef)


State 29

   21 StructSpecifier: error OptTag LC . DefList RC

    error   shift, and go to state 46
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 50 (DefList)

    Specifier        转到状态 47
    StructSpecifier  转到状态 8
    DefList          转到状态 48
    Def              转到状态 49


State 30

   15 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 50

    ExtDecList  转到状态 51
    VarDec      转到状态 13


State 31

   26 VarDec: VarDec LB . INT RB
   27       | VarDec LB . error RB

    error  shift, and go to state 52
    INT    shift, and go to state 53


State 32

   35 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 46
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 50 (DefList)]
    INT     reduce using rule 50 (DefList)
    FLOAT   reduce using rule 50 (DefList)
    ID      reduce using rule 50 (DefList)
    RETURN  reduce using rule 50 (DefList)
    IF      reduce using rule 50 (DefList)
    WHILE   reduce using rule 50 (DefList)
    LC      reduce using rule 50 (DefList)
    RC      reduce using rule 50 (DefList)
    MINUS   reduce using rule 50 (DefList)
    NOT     reduce using rule 50 (DefList)
    LP      reduce using rule 50 (DefList)

    Specifier        转到状态 47
    StructSpecifier  转到状态 8
    DefList          转到状态 54
    Def              转到状态 49


State 33

   10 ExtDef: error FunDec CompSt .

    $default  reduce using rule 10 (ExtDef)


State 34

   20 StructSpecifier: STRUCT error RC .

    $default  reduce using rule 20 (StructSpecifier)


State 35

   18 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 46
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 50 (DefList)

    Specifier        转到状态 47
    StructSpecifier  转到状态 8
    DefList          转到状态 55
    Def              转到状态 49


State 36

   11 ExtDef: Specifier error CompSt .

    $default  reduce using rule 11 (ExtDef)


State 37

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 38

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 39

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 40

   31 FunDec: ID error RP .

    $default  reduce using rule 31 (FunDec)


State 41

   21 StructSpecifier: error . OptTag LC DefList RC
   30 FunDec: ID LP error . RP

    ID  shift, and go to state 56
    RP  shift, and go to state 57

    $default  reduce using rule 22 (OptTag)

    OptTag  转到状态 12


State 42

   29 FunDec: ID LP RP .

    $default  reduce using rule 29 (FunDec)


State 43

   34 ParamDec: Specifier . VarDec

    ID  shift, and go to state 50

    VarDec  转到状态 58


State 44

   28 FunDec: ID LP VarList . RP

    RP  shift, and go to state 59


State 45

   32 VarList: ParamDec . COMMA VarList
   33        | ParamDec .

    COMMA  shift, and go to state 60

    $default  reduce using rule 33 (VarList)


State 46

   21 StructSpecifier: error . OptTag LC DefList RC
   54 Def: error . DecList SEMI

    ID  shift, and go to state 61

    $default  reduce using rule 22 (OptTag)

    OptTag   转到状态 12
    VarDec   转到状态 62
    DecList  转到状态 63
    Dec      转到状态 64


State 47

   52 Def: Specifier . DecList SEMI
   53    | Specifier . error SEMI
   55    | Specifier . DecList

    error  shift, and go to state 65
    ID     shift, and go to state 50

    VarDec   转到状态 62
    DecList  转到状态 66
    Dec      转到状态 64


State 48

   21 StructSpecifier: error OptTag LC DefList . RC

    RC  shift, and go to state 67


State 49

   51 DefList: Def . DefList

    error   shift, and go to state 46
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 50 (DefList)]
    INT     reduce using rule 50 (DefList)
    FLOAT   reduce using rule 50 (DefList)
    ID      reduce using rule 50 (DefList)
    RETURN  reduce using rule 50 (DefList)
    IF      reduce using rule 50 (DefList)
    WHILE   reduce using rule 50 (DefList)
    LC      reduce using rule 50 (DefList)
    RC      reduce using rule 50 (DefList)
    MINUS   reduce using rule 50 (DefList)
    NOT     reduce using rule 50 (DefList)
    LP      reduce using rule 50 (DefList)

    Specifier        转到状态 47
    StructSpecifier  转到状态 8
    DefList          转到状态 68
    Def              转到状态 49


State 50

   25 VarDec: ID .

    $default  reduce using rule 25 (VarDec)


State 51

   15 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 15 (ExtDecList)


State 52

   27 VarDec: VarDec LB error . RB

    RB  shift, and go to state 69


State 53

   26 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 70


State 54

   35 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 71
    INT     shift, and go to state 72
    FLOAT   shift, and go to state 73
    ID      shift, and go to state 74
    RETURN  shift, and go to state 75
    IF      shift, and go to state 76
    WHILE   shift, and go to state 77
    LC      shift, and go to state 32
    MINUS   shift, and go to state 78
    NOT     shift, and go to state 79
    LP      shift, and go to state 80

    RC  reduce using rule 36 (StmtList)

    CompSt    转到状态 81
    StmtList  转到状态 82
    Stmt      转到状态 83
    Exp       转到状态 84


State 55

   18 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 85


State 56

   23 OptTag: ID .

    $default  reduce using rule 23 (OptTag)


State 57

   30 FunDec: ID LP error RP .

    $default  reduce using rule 30 (FunDec)


State 58

   26 VarDec: VarDec . LB INT RB
   27       | VarDec . LB error RB
   34 ParamDec: Specifier VarDec .

    LB  shift, and go to state 31

    $default  reduce using rule 34 (ParamDec)


State 59

   28 FunDec: ID LP VarList RP .

    $default  reduce using rule 28 (FunDec)


State 60

   32 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 86
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        转到状态 43
    StructSpecifier  转到状态 8
    VarList          转到状态 87
    ParamDec         转到状态 45


State 61

   23 OptTag: ID .
   25 VarDec: ID .

    LC        reduce using rule 23 (OptTag)
    $default  reduce using rule 25 (VarDec)


State 62

   26 VarDec: VarDec . LB INT RB
   27       | VarDec . LB error RB
   58 Dec: VarDec .
   59    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 88
    LB        shift, and go to state 31

    $default  reduce using rule 58 (Dec)


State 63

   54 Def: error DecList . SEMI

    SEMI  shift, and go to state 89


State 64

   56 DecList: Dec .
   57        | Dec . COMMA DecList

    COMMA  shift, and go to state 90

    $default  reduce using rule 56 (DecList)


State 65

   53 Def: Specifier error . SEMI

    SEMI  shift, and go to state 91


State 66

   52 Def: Specifier DecList . SEMI
   55    | Specifier DecList .

    SEMI  shift, and go to state 92

    $default  reduce using rule 55 (Def)


State 67

   21 StructSpecifier: error OptTag LC DefList RC .

    $default  reduce using rule 21 (StructSpecifier)


State 68

   51 DefList: Def DefList .

    $default  reduce using rule 51 (DefList)


State 69

   27 VarDec: VarDec LB error RB .

    $default  reduce using rule 27 (VarDec)


State 70

   26 VarDec: VarDec LB INT RB .

    $default  reduce using rule 26 (VarDec)


State 71

   47 Stmt: error . SEMI

    SEMI  shift, and go to state 93


State 72

   76 Exp: INT .

    $default  reduce using rule 76 (Exp)


State 73

   77 Exp: FLOAT .

    $default  reduce using rule 77 (Exp)


State 74

   71 Exp: ID . LP Args RP
   72    | ID . LP RP
   75    | ID .

    LP  shift, and go to state 94

    LP        [reduce using rule 75 (Exp)]
    $default  reduce using rule 75 (Exp)


State 75

   40 Stmt: RETURN . Exp SEMI
   49     | RETURN . Exp

    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 78
    NOT    shift, and go to state 79
    LP     shift, and go to state 80

    Exp  转到状态 95


State 76

   41 Stmt: IF . LP Exp RP Stmt
   42     | IF . LP Exp RP Stmt ELSE Stmt
   43     | IF . error ELSE Stmt

    error  shift, and go to state 96
    LP     shift, and go to state 97


State 77

   44 Stmt: WHILE . LP Exp RP Stmt
   45     | WHILE . error RP
   46     | WHILE . error RC

    error  shift, and go to state 98
    LP     shift, and go to state 99


State 78

   69 Exp: MINUS . Exp

    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 78
    NOT    shift, and go to state 79
    LP     shift, and go to state 80

    Exp  转到状态 100


State 79

   70 Exp: NOT . Exp

    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 78
    NOT    shift, and go to state 79
    LP     shift, and go to state 80

    Exp  转到状态 101


State 80

   68 Exp: LP . Exp RP

    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 78
    NOT    shift, and go to state 79
    LP     shift, and go to state 80

    Exp  转到状态 102


State 81

   39 Stmt: CompSt .

    $default  reduce using rule 39 (Stmt)


State 82

   35 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 103


State 83

   37 StmtList: Stmt . StmtList

    error   shift, and go to state 71
    INT     shift, and go to state 72
    FLOAT   shift, and go to state 73
    ID      shift, and go to state 74
    RETURN  shift, and go to state 75
    IF      shift, and go to state 76
    WHILE   shift, and go to state 77
    LC      shift, and go to state 32
    MINUS   shift, and go to state 78
    NOT     shift, and go to state 79
    LP      shift, and go to state 80

    RC  reduce using rule 36 (StmtList)

    CompSt    转到状态 81
    StmtList  转到状态 104
    Stmt      转到状态 83
    Exp       转到状态 84


State 84

   38 Stmt: Exp . SEMI
   48     | Exp .
   60 Exp: Exp . ASSIGNOP Exp
   61    | Exp . AND Exp
   62    | Exp . OR Exp
   63    | Exp . RELOP Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . STAR Exp
   67    | Exp . DIV Exp
   73    | Exp . LB Exp RB
   74    | Exp . DOT ID

    SEMI      shift, and go to state 105
    ASSIGNOP  shift, and go to state 106
    OR        shift, and go to state 107
    AND       shift, and go to state 108
    RELOP     shift, and go to state 109
    PLUS      shift, and go to state 110
    MINUS     shift, and go to state 111
    STAR      shift, and go to state 112
    DIV       shift, and go to state 113
    LB        shift, and go to state 114
    DOT       shift, and go to state 115

    MINUS     [reduce using rule 48 (Stmt)]
    $default  reduce using rule 48 (Stmt)


State 85

   18 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 18 (StructSpecifier)


State 86

   21 StructSpecifier: error . OptTag LC DefList RC

    ID  shift, and go to state 56

    $default  reduce using rule 22 (OptTag)

    OptTag  转到状态 12


State 87

   32 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 32 (VarList)


State 88

   59 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 78
    NOT    shift, and go to state 79
    LP     shift, and go to state 80

    Exp  转到状态 116


State 89

   54 Def: error DecList SEMI .

    $default  reduce using rule 54 (Def)


State 90

   57 DecList: Dec COMMA . DecList

    ID  shift, and go to state 50

    VarDec   转到状态 62
    DecList  转到状态 117
    Dec      转到状态 64


State 91

   53 Def: Specifier error SEMI .

    $default  reduce using rule 53 (Def)


State 92

   52 Def: Specifier DecList SEMI .

    $default  reduce using rule 52 (Def)


State 93

   47 Stmt: error SEMI .

    $default  reduce using rule 47 (Stmt)


State 94

   71 Exp: ID LP . Args RP
   72    | ID LP . RP

    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 78
    NOT    shift, and go to state 79
    LP     shift, and go to state 80
    RP     shift, and go to state 118

    Exp   转到状态 119
    Args  转到状态 120


State 95

   40 Stmt: RETURN Exp . SEMI
   49     | RETURN Exp .
   60 Exp: Exp . ASSIGNOP Exp
   61    | Exp . AND Exp
   62    | Exp . OR Exp
   63    | Exp . RELOP Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . STAR Exp
   67    | Exp . DIV Exp
   73    | Exp . LB Exp RB
   74    | Exp . DOT ID

    SEMI      shift, and go to state 121
    ASSIGNOP  shift, and go to state 106
    OR        shift, and go to state 107
    AND       shift, and go to state 108
    RELOP     shift, and go to state 109
    PLUS      shift, and go to state 110
    MINUS     shift, and go to state 111
    STAR      shift, and go to state 112
    DIV       shift, and go to state 113
    LB        shift, and go to state 114
    DOT       shift, and go to state 115

    MINUS     [reduce using rule 49 (Stmt)]
    $default  reduce using rule 49 (Stmt)


State 96
